feat: add new routes
